# fusion-core

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json  txtx.yml
.github/workflows/: certora.yml  ci.yml  kani.yml
certora/: README.md  absorb.conf  bitmap.conf  bitmap_helper.conf  c1_canonical.conf  cvlr_inlining.txt  mutations.md  round_trip.conf  supply.conf
certora/specs/: bitmap_find_first_set.rs  c1_canonical_cap.rs  liquidation_terminates.rs  reactor_realizability.rs  supply_invariant.rs
crates/fusd-math/: Cargo.toml  PROOF_STRENGTH.md  kani_audit.tsv  mutants.toml
crates/fusd-math/src/: interest.rs  kani_proofs.rs  lib.rs  oracle_scale.rs  rate_bucket.rs  reactor_pool.rs  recovery.rs  redemption.rs  redistribution.rs
crates/fusd-oracle/: Cargo.toml
crates/fusd-oracle/src/: lib.rs  twap.rs
crates/fusion-stake-math/: Cargo.toml
crates/fusion-stake-math/src/: churn.rs  kani_proofs.rs  lib.rs  lifecycle.rs  preference.rs  reserve.rs  rewards.rs  targets.rs
crates/fusion-stake-view/: Cargo.toml
crates/fusion-stake-view/src/: bytes.rs  lib.rs  position.rs  stake_account.rs  stake_pool.rs  validator_list.rs  vote_state.rs
docs/: clmm-pool-layouts.md  fusd-spec-CHANGES.md  fusd-spec-v1.md  fusion-docs.md
docs/stake-pool/: README.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: litesvm_b1_floors.rs  litesvm_backstop.rs  litesvm_backstop_draw.rs  litesvm_blackswan_replay.rs  litesvm_buckets.rs  litesvm_buffer.rs  litesvm_c16_bad_debt_paydown.rs  litesvm_c1_lst_canonical.rs  litesvm_c7_borrow_fee.rs  litesvm_c9_redemption_base_rate.rs  litesvm_ccr.rs  litesvm_cdp.rs  litesvm_coll_surplus.rs  litesvm_debt_ceiling_line.rs  litesvm_debt_price.rs  litesvm_divergence_gate.rs  litesvm_events.rs  litesvm_fusol_allocation.rs  litesvm_fusol_deposit_stake.rs  litesvm_fusol_epoch_machine.rs  litesvm_fusol_genesis.rs  litesvm_fusol_genesis_smoke.rs  litesvm_fusol_oracle.rs  litesvm_fusol_preferences.rs  litesvm_gov_authority.rs  litesvm_governance.rs  litesvm_guardian.rs  litesvm_ink_nonce.rs  litesvm_interest.rs  litesvm_keeper_reward.rs  litesvm_lever_matrix.rs  litesvm_liq_infra_gate.rs  litesvm_liquidation.rs  litesvm_mcr_grace.rs  litesvm_oracle.rs  litesvm_oracle_crank.rs  litesvm_oracle_grace.rs  litesvm_oracle_matrix.rs  litesvm_oracle_migration.rs  litesvm_plausibility_band.rs  (+12 more)
keepers/: README.md  alert-webhook.sh  bots.spec.ts  common.ts  gov-common.ts  gov.spec.ts  keeper.spec.ts  keeper.ts  keys-sync.ts  liquidator.ts  monitor.html  monitor.spec.ts  monitor.ts  oracle-crank.spec.ts  oracle-crank.ts  redeemer.ts  set-param.ts  stake-pool-crank.spec.ts  stake-pool-crank.ts  verify-fusol-deployment.spec.ts
keepers/deploy/: README.md  fusd-alert-webhook.service  fusd-alert-webhook.timer  fusd-liquidator.service  fusd-monitor.service  fusd-oracle-crank.service  fusd-stake-pool-crank.service  install.sh  keeper.env.example
migrations/: deploy.ts
programs/fusd-core/: Cargo.toml
programs/fusd-core/src/: accrual.rs  bucket.rs  cdp.rs  certora.rs  clmm.rs  constants.rs  errors.rs  events.rs  lib.rs  reactor.rs  reconcile.rs  redist.rs  stake_pool.rs  supply_transition.rs
programs/fusd-core/src/instructions/: adjust_rate.rs  borrow.rs  claim_coll_surplus.rs  claim_reactor_gains.rs  close_position.rs  create_fusd_metadata.rs  debt_ceiling_line.rs  deposit.rs  dev_set_price.rs  fund_buffer.rs  global_backstop.rs  governance.rs  guardian_derisk.rs  init_insurance_buffer.rs  init_market.rs  init_market_oracle.rs  init_protocol.rs  init_reactor_pool.rs  liquidate.rs  migrate_gov_authority.rs  mod.rs  open_position.rs  open_reactor_deposit.rs  oracle_admin.rs  provide_to_reactor.rs  redeem.rs  refresh_market.rs  repay.rs  sample_twap.rs  set_guardian.rs  settle_bad_debt.rs  shutdown.rs  supply_reconciliation.rs  sweep_protocol_collateral.rs  update_price.rs  urgent_redeem.rs  withdraw.rs  withdraw_from_reactor.rs  withdraw_surplus.rs
programs/fusd-core/src/state/: debt_ceiling_line.rs  dex_twap.rs  global_backstop.rs  governance.rs  insurance_buffer.rs  market.rs  market_oracle.rs  mod.rs  position.rs  protocol_config.rs  reactor_pool.rs  redemption_bitmap.rs  supply_reconciliation.rs
programs/fusion-stake-controller/: Cargo.toml
programs/fusion-stake-controller/src/: constants.rs  errors.rs  events.rs  lib.rs  logic.rs  maintenance.rs  spl_cpi.rs
programs/fusion-stake-controller/src/instructions/: close_preference.rs  close_preference_window.rs  deposit_sol.rs  deposit_stake.rs  execute_next_action.rs  finalize_plan.rs  finalize_pool.rs  finish_epoch.rs  initialize_controller.rs  initialize_pool.rs  mod.rs  plan_directed_batch.rs  plan_neutral_batch.rs  reconcile_batch.rs  register_validator.rs  set_preference.rs  snapshot_preference.rs  start_epoch.rs  sync_preference.rs
programs/fusion-stake-controller/src/state/: controller_config.rs  epoch_state.rs  mod.rs  preference.rs  validator_record.rs
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: README.md  bootstrap-fusol.ts  bootstrap.ts  check-no-certora.sh  check-no-dev-oracle.sh  check-no-floats.sh  check-stack-offsets.sh  ci-checks.sh  fetch-spl-stake-pool.sh  fetch-squads.sh  kani-audit.sh  mutants-fusd-math.sh  run-squads-poc.sh  verifiable-build.sh  verify-fusol-deployment.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: index.ts  stake-pool.ts
sdk/src/idl/: fusd_core.json  fusion_stake_controller.json
sdk/test/: health.spec.ts  stake-pool.spec.ts
tests/: fusd-core.ts  squads-gov-poc.ts  surfpool-e2e.ts  surfpool-lifecycle.ts
tests/surfpool/: README.md  run-bot-smoke.sh  run-lifecycle.sh  run.sh
